backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-backend
  namespace: matrix
spec:
  replicas: 5

  selector:
    matchLabels:
      app: matrix-backend

  template:
    metadata:
      labels:
        app: matrix-backend

    spec:
      containers:
      - name: backend
        image: finriustech/test:3935dc6
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: 200m
            memory: 256Mi

          limits:
            cpu: 500m
            memory: 512Mi
