frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-frontend
  namespace: matrix

spec:
  replicas: 1

  selector:
    matchLabels:
      app: matrix-frontend

  template:
    metadata:
      labels:
        app: matrix-frontend

    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      containers:
      - name: frontend
        image: finriustech/test-frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
