postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: matrix

spec:
  serviceName: postgres-headless
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:16

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage

    spec:
      storageClassName: local-path

      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 256Mi
