backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-backend
  namespace: matrix
spec:
  selector:
    app: matrix-backend

  ports:
  - name: http
    port: 80
    targetPort: 8000

  type: ClusterIP
