frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-frontend
  namespace: matrix

spec:
  selector:
    app: matrix-frontend

  ports:
  - name: http
    port: 80
    targetPort: 3000

  type: ClusterIP
