postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: matrix
spec:
  selector:
    app: postgres

  ports:
  - name: postgres
    port: 5432
    targetPort: 5432

  type: ClusterIP
  
  
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: matrix
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
