backend-route.yaml
  apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: matrix-route
    namespace: matrix
  spec:
    parentRefs:
      - name: gateway-api
        namespace: matrix
        sectionName: http
       # change to your domain or IP
    rules:
      - matches:
          - path:
              type: PathPrefix
              value: /
        backendRefs:
          - name: matrix-backend
            namespace: matrix
            port: 80
